--- a/public/index.html
+++ b/public/index.html
@@ -2,19 +2,17 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
 		<meta
 			name="description"
 			content="Web site created using create-react-app"
 		/>
-		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 		<title>Благодарность маме и папе</title>
 	</head>
 	<body>
 		<noscript
-			>Данный сайт работает только в JavaScript. Пожалуйста, включите его в
+			>Данный сайт работает только с JavaScript. Пожалуйста, включите его в
 			настройках браузера</noscript
 		>
 		<div id="root"></div>
